public class Global
{
    #region Tags
    public const string ClownTag = "Clown";
    public const string PedestrianTag = "Pedestrian";
    public const string BulletTag = "ClownBullet";
    #endregion

    #region Animations
    public const string FirstChangePedestrian = "First State";
    public const string SecondChangePedestrian = "Second State";
    public const string ThirdChangePedestrian = "Third State";
    public const string ExplodePedestrian = "Explode State";
    public const string LeftClown = "isLeft";
    public const string RightClown = "isRight";
    #endregion
}
